# edgeinfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: EdgeInferLlama.cmake  EdgeInferOptions.cmake  verify_llama_submodule.cmake
configs/: qwen05b-q4.json
docs/: architecture.md  benchmark-methodology.md  model-pipeline.md  qnn-findings.md
include/edgeinfer/: backend_config.hpp  generation.hpp  inference_backend.hpp  llama_build_info.hpp  model_metadata.hpp  version.hpp
include/edgeinfer/cli/: commands.hpp  parse_args.hpp
models/: README.md
results/: README.md
src/backends/: llama_backend.cpp
src/cli/: commands.cpp  main.cpp  parse_args.cpp
tests/: CMakeLists.txt  generation_test.cpp  llama_link_test.cpp  tokenization_test.cpp
tools/: environment_report.py  prepare_model.py  requirements-model.txt
